--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@ body {
 <h1>Bryan</h1>
 <p>Hello</br>
    I am Bryan,
-   I am a 14 year old Website Developer and Gamer!</p>
+   I am a 14 year old Website Developer!</p>
 <span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9772; Open</span>
 
 <script>
