--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="icon"
 href="icon.jpeg">
+<title>Bryan★</title>
 <style>
  @font-face {
  font-family: "DragonForcE";
