--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="icon"
 href="icon.jpeg">
-<title>Bryan★</title>
+<title>ツ᭄Bʀʏᴀɴ⚡×͜×</title>
 <style>
  @font-face {
  font-family: "DragonForcE";
